updated Galician translation

--- a/po/wesnoth-l/gl.po
+++ b/po/wesnoth-l/gl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-04-07 12:14+0200\n"
-"PO-Revision-Date: 2012-03-19 09:23+0100\n"
+"PO-Revision-Date: 2012-04-29 19:32+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -97,7 +97,7 @@ msgid ""
 "\n"
 msgstr ""
 "Coa sombra da guerra civil estendéndose por Wesnoth, un grupo de habitantes "
-"da fronteira decide rebelarse contra a tiranía da raiña Axevier. Para "
+"da fronteira decide rebelarse contra a tiranía da raíña Axevier. Para "
 "conseguir a súa liberdade, deberán enfrontarse non só a soldados adestrados "
 "de Wesnoth, senón tamén a orcos ou non mortos.\n"
 "\n"
@@ -1641,7 +1641,7 @@ msgid ""
 "of action..."
 msgstr ""
 "Acampados na beira do bosque, observaron en silencio como numerosas tropas "
-"marchaban dende Aldril, unha cidade próxima, cara o noroeste. Non estaban "
+"marchaban desde Aldril, unha cidade próxima, cara o noroeste. Non estaban "
 "seguros do que debían facer polo que se reuniron para discutir as "
 "alternativas…"
 
@@ -1678,7 +1678,7 @@ msgid ""
 "of Wesnoth. Idiocy! If the noble lord of Elensefar is unwilling to resist "
 "the Queen, how should I ever expect to?"
 msgstr ""
-"Dende hai uns días estouvos preocupado polas palabras do señor Fortunio. "
+"Desde hai uns días estouvos preocupado polas palabras do señor Fortunio. "
 "Decateime de que non hai xeito de que venzamos. Nunca derrotaremos a todo o "
 "exército de Wesnoth. É unha estupidez! Se o nobre señor de Elensefar non é "
 "capaz de opoñerse á raíña, como imos facelo nós?"
@@ -1751,7 +1751,7 @@ msgid ""
 "to the ground. No one will live."
 msgstr ""
 "Temo que non o son. A raíña está a enviar parte do seu exército principal "
-"directamente dende Güedin. En canto cheguen reducirán todas as vilas a "
+"directamente desde Güedin. En canto cheguen reducirán todas as vilas a "
 "cinzas. Non sobrevivirá ninguén."
 
 #. [message]: speaker=Baldras
@@ -2122,7 +2122,7 @@ msgstr ""
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:544
 msgid "Riders approach from the northwest! Stand fast, men."
-msgstr "Aproxímanse xinetes dende o noroeste! Resistide, compañeiros."
+msgstr "Aproxímanse xinetes desde o noroeste! Resistide, compañeiros."
 
 #. [unit]: type=Paladin, id=Sir Gwydion
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:553
@@ -2481,7 +2481,7 @@ msgid ""
 "and destruction."
 msgstr ""
 "Unha vez grandes guerreiros nas chairas, estes xinetes montados sobre os "
-"seus esqueléticos cabalos foron erguidos dende o chan mediante unha terríbel "
+"seus esqueléticos cabalos foron erguidos desde o chan mediante unha terríbel "
 "maxia para espallar o medo e a destrución."
 
 # machado FIXADO
