--- a/po/wesnoth-tutorial/gl.po
+++ b/po/wesnoth-tutorial/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-25 14:42+0200\n"
-"PO-Revision-Date: 2012-03-27 19:46+0200\n"
+"PO-Revision-Date: 2012-04-29 21:20+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -293,7 +293,7 @@ msgstr "Eh! Este estafermo deféndese!"
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:446
 msgid "Hmm, perhaps we should have started with a doll."
-msgstr "Mmm, ao mellor deberías comezar cunha boneca."
+msgstr "Hm… Ao mellor deberías comezar cunha boneca."
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:450
@@ -1086,7 +1086,7 @@ msgstr ""
 "Ves esa auga azul escura? É demasiado profunda para que poida cruzala ningún "
 "elfo ou orco. Os orcos poderían vadear o río lentamente por ese estreito "
 "paso de auga superficial (de cor azul claro) do leste. Pero podemos agardar "
-"na beira e obrigalos a loitar dende a auga, así eles quedan desprotexidos na "
+"na beira e obrigalos a loitar desde a auga, así eles quedan desprotexidos na "
 "auga e nós podemos defendernos ben nos bosques."
 
 #. [event]
@@ -1637,7 +1637,7 @@ msgid ""
 "Be careful: if you stand on the bridge you are exposed to attack from "
 "multiple directions!"
 msgstr ""
-"Ten coidado, se quedas na ponte estarás exposto a ataques dende varias "
+"Ten coidado, se quedas na ponte estarás exposto a ataques desde varias "
 "direccións!"
 
 #. [event]
@@ -1767,8 +1767,8 @@ msgid ""
 msgstr ""
 "\n"
 "Neste escenario só necesitas derrotar ao líder dos orcos para gañar. Podes "
-"acceder ás condicións para a vitoria do escenario que esteas a xogar dende "
-"«<b>Menú</b> → <b>Obxectivos do escenario</b>."
+"acceder ás condicións para a vitoria do escenario que esteas a xogar desde "
+"«<b>Menú</b> → <b>Obxectivos do escenario</b>»."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1283
