Updated the Finnish translation.

--- a/po/wesnoth-dm/fi.po
+++ b/po/wesnoth-dm/fi.po
@@ -1,18 +1,19 @@
 # Samu Voutilainen <smar@smar.fi>, 2010.
+# Jarkko Patteri <jarkkopatteri@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-02-18 13:15+0100\n"
-"PO-Revision-Date: 2010-12-27 16:08+0200\n"
-"Last-Translator: Jussi Rautio <kipuna@gmail.com>\n"
+"POT-Creation-Date: 2012-04-07 12:14+0200\n"
+"PO-Revision-Date: 2012-05-06 23:58+0300\n"
+"Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.0\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [campaign]: id=Delfadors_Memoirs
 #. [editor_group]: id=dm
@@ -428,35 +429,25 @@ msgstr "Ei! Methor... Älä kuole!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Kuule viimeiset sanani, Delfador! Matkaa koilliseen Weldyniin, ja etsi "
-"käsiisi ystäväni Leollyn. Hän auttaa sinua."
+"Kuule viimeiset sanani, Delfador! Matkaa Weldyniin, ja etsi ystäväni "
+"Leollyn. Hän auttaa sinua."
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
 "journey northwest to Weldyn, and seek out my friend Leollyn. He will help "
 "you."
 msgstr ""
-"Hyvin tehty, Delfador! Näen, että olen kouluttanut sinut hyvin, ja että sinä "
-"olet valmis etsimään kohtalosi. Minun matkapäiväni ovat ohitse, mutta sinun "
-"on aika taivaltaa koilliseen Weldyniin, ja etsiä käsiisi ystäväni Leollyn. "
-"Hän auttaa sinua."
+"Hyvin tehty, Delfador! Koulutuksesi ei ole mennyt hukkaan. Sinä olet valmis "
+"etsimään kohtalosi. Minun matkapäiväni ovat ohitse, mutta sinun on aika "
+"taivaltaa kohti Weldyniä, ja etsiä käsiisi ystäväni Leollyn. Hän auttaa "
+"sinua."
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:153
@@ -1070,7 +1061,6 @@ msgstr "Minne hän meni?"
 
 #. [message]: speaker=Harold
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:174
-#, fuzzy
 msgid "Haw haw haw! Fools!"
 msgstr "Hah hah haa! Hyväuskoiset hölmöt!"
 
@@ -1506,7 +1496,7 @@ msgstr "Luut"
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:331
 msgid "Penella"
-msgstr ""
+msgstr "Penella"
 
 #. [message]: speaker=Penella
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:335
@@ -1524,7 +1514,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:342
 msgid "Roddry"
-msgstr ""
+msgstr "Roddry"
 
 #. [message]: speaker=Roddry
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:346
@@ -1552,7 +1542,7 @@ msgstr "Kuolin kauan aikaa sitten. Olen unohtanut nimeni."
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:356
 msgid "Melinna"
-msgstr ""
+msgstr "Melinna"
 
 #. [message]: speaker=Melinna
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:360
@@ -1584,7 +1574,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:371
 msgid "Sythan"
-msgstr ""
+msgstr "Sythan"
 
 #. [message]: speaker=Sythan
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:375
@@ -1598,7 +1588,7 @@ msgstr ""
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:378
 msgid "Hereld"
-msgstr ""
+msgstr "Hereld"
 
 #. [message]: speaker=Hereld
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:382
@@ -3227,10 +3217,8 @@ msgstr "Trgrau"
 
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
-#, fuzzy
-#| msgid "Death of Garard"
 msgid "Death of Garard II"
-msgstr "Garardin kuolema"
+msgstr "Garard II:n kuolema"
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:243
@@ -3270,7 +3258,7 @@ msgstr ""
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:259
 msgid "Agreed, but we must make haste, for the King is hard pressed."
-msgstr ""
+msgstr "Kyllä, mutta meidän pitää kiirehtiä. Kuningas on pulassa."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:267
@@ -4928,12 +4916,11 @@ msgstr "Velhokisälli"
 
 #. [unit_type]: id=Journeyman Mage
 #: data/campaigns/Delfadors_Memoirs/units/Journeyman_Mage.cfg:13
-#, fuzzy
 msgid ""
 "A mage who has just finished his apprenticeship is known as a journeyman. "
 "Journeyman mages travel far in search of employment and experience."
 msgstr ""
-"Velho, joka on juuri lopettanut oppipoikanaolonsa, tunnetaan kisällinä. "
+"Velho, joka on juuri lopettanut harjoittelunsa, tunnetaan kisällinä. "
 "Kisällivelhot matkaavat kauas etsiessään työtä ja kokemusta."
 
 #. [unit_type]: id=King of Wesnoth
