Updated the Finnish translation.

--- a/po/wesnoth-aoi/fi.po
+++ b/po/wesnoth-aoi/fi.po
@@ -1,19 +1,20 @@
 # translation of fi.po to Finnish
 # Santtu Pajukanta <santtu@pajukanta.fi>, 2007.
+# Jarkko Patteri <jarkkopatteri@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: fi\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2010-12-20 19:39+0200\n"
-"Last-Translator: Jussi Rautio <kipuna@gmail.com>\n"
-"Language-Team: Finnish\n"
+"PO-Revision-Date: 2012-05-15 03:20+0300\n"
+"Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
+"Language-Team: Finnish <wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.2\n"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:11
@@ -89,7 +90,7 @@ msgstr "Version 1.4 jälkeiset pelattavuuden parannukset"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Taide ja Graafinen Suunnittelu"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
