--- a/po/wesnoth-dw/fi.po
+++ b/po/wesnoth-dw/fi.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-09 18:44+0300\n"
+"PO-Revision-Date: 2012-05-15 03:23+0300\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: \n"
@@ -366,7 +366,7 @@ msgstr "Hyvää työtä Kai."
 #. [scenario]: id=02_Flight
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:27
 msgid "Flight"
-msgstr ""
+msgstr "Lentue"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:35
