--- a/po/wesnoth/fi.po
+++ b/po/wesnoth/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-05-11 22:06+0200\n"
-"PO-Revision-Date: 2012-04-07 02:23+0300\n"
+"PO-Revision-Date: 2012-05-15 03:21+0300\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: fi\n"
@@ -5171,12 +5171,16 @@ msgid "prompt^Command:"
 msgstr "Komento:"
 
 #: src/mouse_events.cpp:703
+#, fuzzy
+#| msgid ""
+#| "You cannot move your leader away from the keep with some planned recruits "
+#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
 msgstr ""
-"Niin kauan kun suunniteltuja värväyksiä tai kutsumisia on tekemättä, "
-"johtajaa ei voi siirtää pois linnakkeesta."
+"Niin kauan kun suunniteltuja värväyksiä tai kutsumisia on jäljellä, johtajaa "
+"ei voi siirtää pois linnakkeesta."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
