Updated the Finnish translation.

--- a/po/wesnoth-ei/fi.po
+++ b/po/wesnoth-ei/fi.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.2-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-05-11 22:06+0200\n"
-"PO-Revision-Date: 2012-05-15 03:22+0300\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-05-15 19:42+0300\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <kde-i18n-doc@kde.org>\n"
 "Language: fi\n"
@@ -74,8 +74,8 @@ msgid ""
 "the villagers and find out what is happening.\n"
 "\n"
 msgstr ""
-"Huhutaan epäkuolleiden hyökkäyksistä Wesnothin itäisellä rajalla. Sinut, "
-"kuninkaallisen armeijan upseeri, on lähetetty itäiselle rintamalle "
+"Huhutaan epäkuolleiden hyökkäyksistä Wesnothin itäisellä rajalla. Olet "
+"kuninkaallisen armeijan upseeri, joka on lähetetty itäiselle rintamalle "
 "suojelemaan kyläläisiä ja selvittämään, mitä on tapahtumassa.\n"
 "\n"
 
@@ -713,7 +713,7 @@ msgstr "Ota se"
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:330
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:537
 msgid "holy amulet^Leave it"
-msgstr ""
+msgstr "Jätä se"
 
 #. [scenario]: id=05_Northern_Outpost
 #. [scenario]: id=02_The_Escape_Tunnel
@@ -3426,7 +3426,7 @@ msgstr ""
 #. [message]: speaker=Konrad
 #: data/campaigns/Eastern_Invasion/scenarios/17b_Weldyn_Besieged.cfg:358
 msgid "The Kingdom of Wesnoth dies with me!"
-msgstr ""
+msgstr "Wesnothin kuningaskunta kuolee mukanani!"
 
 #. [scenario]: id=18_Epilogue
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:4
