updated Italian translation

--- a/po/wesnoth-tb/it.po
+++ b/po/wesnoth-tb/it.po
@@ -1589,7 +1589,7 @@ msgstr ""
 "affrontare altre minacce nel frattempo.\n"
 "\n"
 "È stato più difficile stare lontano in questi due anni, ma ho il mio amuleto "
-"e Bjarn il suo, ed abbiamo avuto poche opportunità di incontrarci di nuovo. "
+"e Baran il suo, ed abbiamo avuto poche opportunità di incontrarci di nuovo. "
 "Siccome però la compagnia si è trovata a passare da queste parti del regno "
 "con un nuovo padrone, ho chiesto il permesso di assentarmi per fare visita a "
 "mio fratello ed è stato accordato."
@@ -1616,284 +1616,3 @@ msgstr ""
 "il suo sguardo. Penso che presto dovremo lavorare per la nostra paga.\n"
 "\n"
 "Nel frattemo, comunque, è bello rilassarsi e godersi la pace."
-
-#~ msgid "Arne"
-#~ msgstr "Arne"
-
-#~ msgid "Bjarn"
-#~ msgstr "Bjarn"
-
-#~ msgid "Fargus"
-#~ msgstr "Fargus"
-
-#~ msgid "Erik"
-#~ msgstr "Erik"
-
-#~ msgid "Heine"
-#~ msgstr "Heine"
-
-#~ msgid "Magnus"
-#~ msgstr "Magnus"
-
-#~ msgid "Councillor Hoban"
-#~ msgstr "Consigliere Hoban"
-
-#~ msgid "Greetings, my brother! How may my men and I be of aid?"
-#~ msgstr ""
-#~ "Salute a te, fratello mio! Come possiamo io e i miei uomini esserti di "
-#~ "aiuto?"
-
-#~ msgid ""
-#~ "I will lead my men, and such villagers as can keep up with us, north to "
-#~ "slay this Mordak! What will you do?"
-#~ msgstr ""
-#~ "Guiderò i miei uomini e tutti i paesani che vorranno venire con noi a "
-#~ "nord, per uccidere Mordak! Cosa farai tu?"
-
-#~ msgid ""
-#~ "The pursuit had already run for several days when the pursuers came to "
-#~ "the bounds of the huge forest known as the Grey Woods. Ancient tales "
-#~ "warned of lost souls haunting the wood, hunting and killing anyone brave "
-#~ "enough to enter it."
-#~ msgstr ""
-#~ "L’inseguimento durava già da diversi giorni quando gli inseguitori "
-#~ "giunsero ai confini di una vasta foresta conosciuta come i Boschi Grigi. "
-#~ "Antiche leggende narrano di anime perse che si aggirano per i boschi, "
-#~ "cacciando e uccidendo chiunque osi entrare nelle selve."
-
-#~ msgid ""
-#~ "Heedless of those rumors, Arne followed them. His only worry was that his "
-#~ "horsemen would be at disadvantage if attacked in the forest."
-#~ msgstr ""
-#~ "Incurante di questi racconti, Arne li inseguì. La sua sola preoccupazione "
-#~ "era che i suoi cavalieri sarebbero stati svantaggiati se fossero stati "
-#~ "attaccati nella foresta."
-
-#~ msgid "Sounds of a scuffle were heard from the forest."
-#~ msgstr "Dalla foresta si ode il rumore di una colluttazione."
-
-#~ msgid ""
-#~ "It is whispered that hungry ghosts rule this forest, and kill everyone "
-#~ "who dares to enter."
-#~ msgstr ""
-#~ "Si mormora che la foresta sia infestata da spettri famelici, che uccidono "
-#~ "chiunque osi entrarci."
-
-#, fuzzy
-#~ msgid ""
-#~ "Arne’s men arrived at the castle and were immediately challenged by some "
-#~ "guards."
-#~ msgstr ""
-#~ "Gli uomini di Arne giunsero al castello e vennero immediatamente "
-#~ "affrontati da alcune guardie."
-
-#~ msgid "Nooo! This is the end..."
-#~ msgstr "Nooo! Questa è la fine..."
-
-#~ msgid ""
-#~ "Good to see you, Arne. Now can you get me out of this dungeon, please?"
-#~ msgstr ""
-#~ "Arne, sono felice di vederti. Ora puoi aiutarmi a uscire da questa "
-#~ "prigione, per piacere."
-
-#~ msgid "Finally the warlord is killed. Now you can go back to Maghre."
-#~ msgstr "Finalmente l’orco è morto. Ora puoi tornare a Maghre."
-
-#, fuzzy
-#~ msgid ""
-#~ "It took years to rebuild the village and restore the surrounding farms. "
-#~ "The people of Maghre had to work very hard, but felt better knowing "
-#~ "Arne’s men would be their firm allies in troubled times."
-#~ msgstr ""
-#~ "Ci vollero anni per ricostruire il villaggio e ripristinare le fattorie "
-#~ "circostanti. La gente di Maghre dovette lavorare duramente, ma si sentì "
-#~ "meglio nel sapere che gli uomini di Arne sarebbero stati per sempre loro "
-#~ "alleati in caso di difficoltà."
-
-#, fuzzy
-#~ msgid ""
-#~ "Arne and his men left the village assured that it would be well guided by "
-#~ "Bjarn. On their journeys they faced many challenges and battles. Some "
-#~ "tales even mention Arne’s name together with that of the famous elvish "
-#~ "lord Kalenz, but this is a different story..."
-#~ msgstr ""
-#~ "Arne e i suoi uomini lasciarono il villaggio tranquillizzati dal fatto "
-#~ "che i paesani sarebbero stati guidati da Bjarn. Nel corso dei loro viaggi "
-#~ "affrontarono molte sfide e innumerevoli battaglie. Alcune leggende "
-#~ "menzionano anche il nome di Arne insieme a quello di Kalenz, famoso "
-#~ "signore degli elfi, ma questa è un’altra storia..."
-
-#~ msgid ""
-#~ "(Novice level, 4 scenarios; the ‘Hard’ version may challenge more "
-#~ "experienced players.)"
-#~ msgstr ""
-#~ "(Campagna per neofiti, 4 scenari; la versione «Impegnativa» può essere "
-#~ "impegnativa anche per giocatori esperti)"
-
-#~ msgid "Turns run out"
-#~ msgstr "Fine dei turni a disposizione"
-
-#~ msgid ""
-#~ "Hurry, we have to track them down. Maybe we can still get them. They have "
-#~ "to be in the north!"
-#~ msgstr ""
-#~ "Forza! dobbiamo inseguirli. Forse ce la facciamo a raggiungerli. Devono "
-#~ "essere andati verso nord."
-
-#~ msgid "Hurry to the north and stop the kidnappers"
-#~ msgstr "Corri a nord e blocca i rapitori"
-
-#~ msgid "Come on men. A bracing walk in the woods never hurt anyone, did it?"
-#~ msgstr ""
-#~ "Avanti, uomini. Una passeggiata nel bosco non ha mai fatto male a "
-#~ "nessuno, giusto?"
-
-#, fuzzy
-#~ msgid ""
-#~ "Those men had some great arguments persuading me to stop you and let them "
-#~ "pass my forest. Any further, and you will die."
-#~ msgstr ""
-#~ "Quella gente mi ha persuaso con validi argomenti che tu non devi entrare "
-#~ "in questa foresta. Se ci provi, morirai."
-
-#, fuzzy
-#~ msgid "Curses! I hope the reinforcements get here to aid our escape."
-#~ msgstr ""
-#~ "Maledizione! Spero che i rinforzi arrivino presto, così potrò scappare."
-
-#~ msgid ""
-#~ "Hah! You got me alright, but what does that help? No harm telling you "
-#~ "now, I suppose. Your precious mage is safely locked away in our dungeons. "
-#~ "I was set up to be a decoy."
-#~ msgstr ""
-#~ "Ah! Mi hai preso, ma a cosa ti è servito? Non c’è niente di male a "
-#~ "dirtelo, ormai. Il tuo prezioso mago è chiuso a chiave nei nostri "
-#~ "sotterranei. Sono stato mandato solo per fare da esca."
-
-#~ msgid ""
-#~ "Nooo! Tricked again. Tell us where he is and we shall spare your "
-#~ "miserable life."
-#~ msgstr ""
-#~ "Nooo! Ci hanno fregato ancora. Dicci dov’è e risparmierò la tua "
-#~ "miserabile vita."
-
-#, fuzzy
-#~ msgid "Thank you. Leave him, men, we ride east."
-#~ msgstr "Grazie. Uomini, lasciatelo andare. Dobbiamo cavalcare verso Est."
-
-#~ msgid ""
-#~ "Greetings, I am Brena. I saw you fighting the foul undead. I like nothing "
-#~ "better than smashing those foul skeletons and their ilk. Though I came "
-#~ "too late to help in this fight, I would like to aid you in your "
-#~ "forthcoming endeavors."
-#~ msgstr ""
-#~ "Piacere, sono Brena. Ti ho visto combattere contro quegli esseri immondi. "
-#~ "Non c’è nulla di più bello che massacrare quegli orridi scheletri e la "
-#~ "loro razza. Purtroppo sono arrivato troppo tardi per esserti d’aiuto in "
-#~ "questo combattimento, ma mi piacerebbe aiutarti nei prossimi scontri."
-
-#~ msgid "I think your village is protected well, though."
-#~ msgstr "Comunque, penso che il villaggio sia protetto bene."
-
-#~ msgid "So am I. But what is happening to our village?"
-#~ msgstr "Anch’io lo sono, ma dimmi, cosa sta succedendo al nostro villaggio?"
-
-#~ msgid ""
-#~ "In the time you have been away a looting band of orcs took over this "
-#~ "region. There was noone here to stop them."
-#~ msgstr ""
-#~ "Durante la tua assenza una banda di razziatori orchi ha scorrazzato per "
-#~ "la regione. Non c’era nessuno per fermarli."
-
-#~ msgid ""
-#~ "I have to leave you now. My men and I are needed by others, too. But "
-#~ "should you ever face another grim foe, send me a messenger. I'll come as "
-#~ "fast as I can, little brother."
-#~ msgstr ""
-#~ "Devo lasciarti ora. Altra gente ha bisogno di me e dei miei uomini. Ma se "
-#~ "dovrai mai affrontare qualche altro pericolo faccia a faccia non esitare, "
-#~ "e mandami un messaggero. Farò il più in fretta possibile, fratellino."
-
-#~ msgid ""
-#~ "In a remote part of Wesnoth, people lived their lives working hard and "
-#~ "caring for each other, but not knowing much about the world outside. But "
-#~ "there came a day when their peaceful world was shattered, as an evil mage "
-#~ "came to the region, spreading havoc and despair."
-#~ msgstr ""
-#~ "In una zona remota di Wesnoth la gente viveva lavorando sodo e "
-#~ "prendendosi cura gli uni degli altri, del tutto ignara di ciò che "
-#~ "avveniva nelle altre parti del mondo. Un giorno, però, il loro mondo "
-#~ "pacifico venne messo in pericolo da un mago malvagio, addentratosi nella "
-#~ "regione per seminare terrore e disperazione."
-
-#~ msgid ""
-#~ "Bjarn, the local mage of the village, was the man who saw best how to "
-#~ "deal with this threat. He asked the help of his brother Arne, leader of a "
-#~ "mercenary band of horsemen, and outfitted several of the villagers with "
-#~ "gear from the armory."
-#~ msgstr ""
-#~ "Bjarn, il mago del villaggio, era l'unico uomo capace di occuparsi del "
-#~ "problema. Chiese l'aiuto di suo fratello Arne, comandante di una banda "
-#~ "mercenaria di cavalieri, e si fece aiutare da molti paesani a cui fece "
-#~ "indossare armature."
-
-#~ msgid ""
-#~ "Mordak, an evil mage, threatens our lives and livelihoods. He is "
-#~ "terrorizing our countryside. I've already called the village to arms and "
-#~ "now it's up to you to lead them. You'll find him about two days' ride "
-#~ "north of here."
-#~ msgstr ""
-#~ "Mordak, un mago malvagio, minaccia le nostre vite. Ha terrorizzato tutti. "
-#~ "Ho già richiamato alle armi il villaggio e ora toccherà a te comandarli. "
-#~ "Troverai il mago a due giorni di cavalcata a nord di qui."
-
-#~ msgid ""
-#~ "Very well. We will go there and slay this source of evil. Charge, men!"
-#~ msgstr ""
-#~ "Molto bene. Andremo là e uccideremo questo mago malvagio. Carica, uomini!"
-
-#~ msgid ""
-#~ "I will attempt to sneak through the forest. If I can slay the evil one "
-#~ "while he is off his guard, the battle will be over in one stroke!"
-#~ msgstr ""
-#~ "Proverò a passare furtivamente attraverso la foresta. Se posso uccidere "
-#~ "il malvagio mentre non è in guardia la battaglia finirà in un baleno!"
-
-#~ msgid ""
-#~ "This is worrying. What's happened to Bjarn? I suppose we must slay the "
-#~ "dark sorcerer ourselves."
-#~ msgstr ""
-#~ "È preoccupante. Cos'è successo a Bjarn? Sarà meglio uccidere lo stregone "
-#~ "nero da soli."
-
-#~ msgid "Good work, men. Now, where is Bjarn?"
-#~ msgstr "Bel lavoro uomini. Dov'è Bjarn?"
-
-#~ msgid "Nothing more to be had from him."
-#~ msgstr "Non potrà più nuocermi."
-
-#~ msgid ""
-#~ "Sir, he's been kidnapped! I just saw some men running off with him. They "
-#~ "looked like friends of this one."
-#~ msgstr ""
-#~ "Signore, è stato rapito! Ho visto alcuni uomini scappare di corsa con "
-#~ "lui. Sembravano amici di questo tipo qui."
-
-#~ msgid "Damn! I suppose we have to go after him, then."
-#~ msgstr "Dannazione! Dobbiamo inseguirli, allora."
-
-#~ msgid ""
-#~ "Ha, so you thought to send a mage around and stab me in the back? Well, I "
-#~ "have news for you. We've kidnapped him!"
-#~ msgstr ""
-#~ "Ah, pensavi di mandare un mago in missione per farmi colpire alle spalle? "
-#~ "Ok, ho una novità per te. Lo abbiamo rapito!"
-
-#~ msgid ""
-#~ "What? Bjarn kidnapped? And the evil mage still ravages the land? Noooo!"
-#~ msgstr ""
-#~ "Cosa? Bjarn, rapito? E il mago malvagio continua a saccheggiare le nostre "
-#~ "terre? Noooo!"
-
-#~ msgid "A glorious combat at last, against mounted enemies!"
-#~ msgstr "Un glorioso combattimento finalmente, contro nemici a cavallo!"
